Refactor translation index and parser to improve caching, structure, and performance; replace file-based I/O with VirtualFile for efficiency; optimize route pattern matching with caching; add tests for translation handling.